使用 Colaboratory 建立

--- a/ML_HW03.ipynb
+++ b/ML_HW03.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1MbxgCAU-iqJNPIkdhHbu3wqX5dVbX12Z",
-      "authorship_tag": "ABX9TyOu4EIfhyg3pbA86tn9N9dx",
+      "authorship_tag": "ABX9TyNwY2pmmX3O4TYSEo5aWTSX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1144,12 +1144,107 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UhTZ91R8mnw3"
+      },
+      "source": [
+        "from sklearn.metrics import f1_score, precision_score, recall_score"
+      ],
+      "execution_count": 39,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "P7dMPAxcmwLM",
+        "outputId": "93703f3e-3258-4cdd-d759-ed6a300ed563",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "recall_score(Y_test,lr.predict(X_test),average='micro')"
+      ],
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9863013698630136"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 40
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-ecIzps7m1rC",
+        "outputId": "b584636c-4c7b-4241-8b64-4b8f6079fd2d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "precision_score(Y_test,lr.predict(X_test),average='micro')"
+      ],
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9863013698630136"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 41
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "k-SFo2_Mm9MY",
+        "outputId": "10c90e68-e990-40fa-ffc0-87b2dcd8ae3a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "f1_score(Y_test,lr.predict(X_test),average='micro')"
+      ],
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9863013698630136"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 42
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "O4DweRbvfeQ5"
       },
       "source": [
-        "ROC&AUC&precision"
+        "ROC&AUC"
       ]
     },
     {
@@ -1195,42 +1290,6 @@
       ],
       "execution_count": 30,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "4qPl25V6gEoV",
-        "outputId": "c3bdf41e-d0d4-49af-f082-f2f0489b9bf0",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "precision_score(Y_test,lr.predict(X_test),pos_label='positive',average='micro')"
-      ],
-      "execution_count": 31,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/sklearn/metrics/_classification.py:1321: UserWarning: Note that pos_label (set to 'positive') is ignored when average != 'binary' (got 'micro'). You may use labels=[pos_label] to specify a single positive class.\n",
-            "  % (pos_label, average), UserWarning)\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.9863013698630136"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 31
-        }
-      ]
     },
     {
       "cell_type": "code",
